Fixed padding issue in favourites section on small and extra small devices

--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -60,7 +60,6 @@
       .favourite-items {
         h2 {
           padding: 2.1rem 4rem;
-          padding-top: 0;
         }
       }
     }
